log
Thu, May  1, 2025 11:14:18 PM: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
5729e4d
Thu, May  1, 2025 11:15:02 PM: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|8
total_score: 0/70
0d082f2
Thu, May  1, 2025 11:15:32 PM: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
db74efa
Thu, May  1, 2025 11:18:58 PM: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  8|7
total_score: 5/70
8aea1e9
Thu, May  1, 2025 11:19:36 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
c3760c5
Thu, May  1, 2025 11:19:58 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
9c04ae3
Thu, May  1, 2025 11:36:27 PM: 
 treemap.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  11|6
total_score: 15/70
de0538e
Thu, May  1, 2025 11:41:22 PM: 
 treemap.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
95bda3f
Thu, May  1, 2025 11:42:50 PM: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
7ebc0f3
Fri, May  2, 2025 12:17:55 AM: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
a4077b4
Fri, May  2, 2025  7:45:21 PM: 
 treemap.c | 33 ++++++++++++++++++++++++++++++++-
 1 file changed, 32 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:119:12: error: 'return' with a value, in function returning void [-Werror]
     return NULL;
            ^~~~
treemap.c:87:6: note: declared here
 void removeNode(TreeMap * tree, TreeNode* node) {
      ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
fe058be
Fri, May  2, 2025  7:45:39 PM: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
7251ff0
